@@ -75,4 +75,6 @@ consists out of:
 We have received patches from the following people, thanks!
   o Håkan Olsson
   o Jakob Schlyter
+  o Paul Wouters
+
 
